--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,36 +54,13 @@
   width: 0%;
 }
 
-/* Modal Component Styles */
+/* Swiper */
 
-.backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+.swiper {
   width: 100%;
-  background: #000000e1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow-y: hidden;
+  height: 100%;
 }
 
-.modal {
-  width: clamp(50%, 700px, 90%);
-  height: min(50%, 300px);
-
-  margin: auto;
-  padding: 0 2rem;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.orange-gradient {
-  background: var(--gradient);
-}
 /* TailwindCss Utility Classes */
 
 .arrowright {
